update package keywords

--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "instrument": false
   },
   "keywords": [
-    "es6",
-    "boilerplate",
-    "test",
-    "coverage"
+    "babelute-html",
+    "todomvc"
   ],
   "author": "Gilles Coomans",
   "license": "MIT",
