--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
   "license": "MIT",
   "dependencies": {
     "event-emitter-es6": "^1.1.5",
-    "eventemitter3": "^2.0.2",
-    "babelute": "^0.4.0",
-    "babelute-html": "^0.2.1"
+    "babelute-html-dom-diffing-pragmatics": "^0.4.3",
+    "babelute-html-lexicon": "^0.2.3"
   },
   "devDependencies": {
     "assert": "^1.4.1",
@@ -50,9 +49,9 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
     "karma-rollup-preprocessor": "^3.0.3",
-    "mocha": "^3.0.2",
-    "nyc": "^8.1.0",
-    "rollup": "^0.41.4",
+    "mocha": "^3.2.0",
+    "nyc": "^10.2.0",
+    "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
